[package]
name = "rublk"
version = "0.2.11"
edition = "2021"
description = "Rust ublk generic targets"
authors = ["Ming Lei <tom.leiming@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ublk-org/rublk"
license = "GPL-2.0-or-later"
keywords = ["ublk", "io_uring", "userspace", "block", "storage"]
publish = true

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qcow2-rs = "0.1"
libublk = "0.4.3"
clap = { version = "4.3", features = ["derive"] }
clap_derive = "4.3"
libc = "0.2"
anyhow = {version = "1.0.66", features = ["default"]}
thiserror = {version = "2.0"}
serde = {version = "1.0.99", features = ["derive"]}
serde_json = "1.0.79"
log = {version = "0.4", features = ["release_max_level_off"]}
env_logger = "0.9"
backtrace = "0.3"
daemonize = "0.5"
nix = { version = "0.30", features = ["mman", "ioctl", "event"] }
io-uring = "=0.7.6"
ilog = "1.0.1"
shared_memory = "0.12.4"
rand = "0.8.4"
smol = "2.0.2"
futures = "0.3.31"
async-trait = "0.1"
rustversion = "1.0.14"
parse-size = "1.1.0"
bitflags = "2.8"
rocksdb = { version = "0.24.0", optional = true }
bincode = { version = "1.3.3", optional = true }
opencl3 = { version = "0.12", optional = true }
num_cpus = "1.17"
ctrlc = "3.4"

[features]
default = ["vram"]
compress = ["rocksdb", "bincode"]
vram = ["opencl3"]

[dev-dependencies]
tempfile = "3.6.0"
regex = "1.8.4"
